feat(KP): Corrects

--- a/helpers/html/Notification.pug
+++ b/helpers/html/Notification.pug
@@ -25,12 +25,10 @@ table(align='center' width='100%' border='0' cellpadding='0' cellspacing='0' bgc
         h4(style='color: #e6590e; text-align: center; font-size: 18px; margin: 0; line-height: 1; font-weight: normal; letter-spacing: 1px;')
           | Hey!
         h1(style='color: #000; margin: 0; padding: 20px 0 0 0; font-size: 40px; line-height: 1; font-weight: normal; letter-spacing: 1px;')
-          | Your pair #{fsym} - #{tsym} !
+          | You have new user !
         p &nbsp;
         p(style='font-size:16px; color: #666; letter-spacing: 1px; padding: 0 30px; line-height: 1.5')
-          | Currency for now is #{currency}
-        p(style='font-size:16px; color: #666; letter-spacing: 1px; padding: 0 30px; line-height: 1.5')
-          | #{type}
+          | His email is #{userEmail}
         p
           | #{date}
     tr
@@ -48,4 +46,4 @@ table(align='center' width='100%' border='0' cellpadding='0' cellspacing='0' bgc
       td &nbsp;
     tr
       td(align='center' style='background: #eff2f8; padding: 25px 10px; font-size: 12px; letter-spacing: 1px; color: #666;')
-        | Copyright @ #{currentYear}. Currency. All Rights Reserved
+        | Copyright @ #{currentYear}. Repetitors. All Rights Reserved
